<resources>
    <string name="app_name">MTSHomework</string>
    <string name="genre_fighting">боевики</string>
    <string name="date_human_anger">22.04.2021</string>
    <string name="title_human_anger">Гнев человеческий</string>
    <string name="age_18_plus">18+</string>
    <string name="description_human_anger">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="actors">Актеры</string>
    <string name="actor_name_stethem">Джейсон Стэйтем</string>
    <string name="actor_name_mackellany">Холт Маккэллани</string>
    <string name="actor_name_harnett">Джош Харнетт</string>
    <string name="popular_now">Популярное сейчас</string>
    <string name="default_profile_name">Default Name</string>
    <string name="default_profile_mail">default@mail.com</string>
    <string name="interests_title">Интересы</string>
    <string name="name_hint">Имя</string>
    <string name="personal_data_title">Личные данные</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_mail">E-mail</string>
    <string name="hint_phone">Телефон</string>
    <string name="settings_title">Настройки</string>
    <string name="profile_notification_button">Уведомления и звуки</string>
    <string name="profile_settings_confident">Конфиденциальность</string>
    <string name="profile_settings_theme">Тема</string>
    <string name="profile_settings_language">Язык</string>
    <string name="profile_settings_memory">Данные и память</string>
    <string name="profile_title_app">Приложение</string>
    <string name="profile_app_ask">Задать вопрос</string>
    <string name="profile_app_problem">Сообщить о проблеме</string>
    <string name="button_exit">Выйти</string>
    <string name="notification_channel_name">notification_channel</string>
    <string name="notification_channel_description">notification_channel_description</string>
</resources>